Updated till Global Error Handling

--- a/CarRentalManagement/Client/Pages/Bookings/Index.razor
+++ b/CarRentalManagement/Client/Pages/Bookings/Index.razor
@@ -5,6 +5,13 @@
 
 
 <h3 class="card-title">Car Bookings</h3>
+
+<a href="/bookings/create" class="btn btn-secondary">
+    <span class="oi oi-plus"></span>
+    Create New Booking
+</a>
+<br />
+<br />
 @if (Bookings == null)
 {
     <div class="alert alert-info">Loading Bookings...</div>
@@ -29,20 +36,20 @@ else
                     <td>@booking.Id</td>
                     <td>@booking.Customer.DrivingLicence</td>
                     <td>@booking.DateCreated.Date.ToString("dd MMMM yyyy")</td>
-                    <td>@((booking.DateIn - booking.DateOut).TotalDays.ToString())</td>
+                    <td>@(booking.DateIn != null ? (booking.DateIn.Value -booking.DateOut).TotalDays.ToString() : "To Be Determined")</td>
                     <td>@booking.Vehicle.LicencePlateNumber</td>
                     <td>
-                        <a href="/makes/view/@booking.Id" class="btn btn-primary">
-                        <span class="oi oi-book"></span>
+                        <a href="/bookings/view/@booking.Id" class="btn btn-primary">
+                            <span class="oi oi-book"></span>
                         </a>
-                        <a href="/makes/edit/@booking.Id" class="btn btn-warning">
-                        <span class="oi oi-pencil"></span>
+                        <a href="/bookings/edit/@booking.Id" class="btn btn-warning">
+                            <span class="oi oi-pencil"></span>
                         </a>
                         <button class="btn btn-danger" @onclick="@(()=>Delete(booking.Id))">
-                        <span class="oi oi-delete"></span>
+                            <span class="oi oi-delete"></span>
                         </button>
                     </td>
-                 </tr>
+                </tr>
             }
         </tbody>
     </table>
@@ -50,6 +57,7 @@ else
 
 @code {
     private List<Booking> Bookings;
+    private DateTime nullDT = new DateTime(1, 1, 1, 0, 0, 0);
 
     protected async override Task OnInitializedAsync()
     {
@@ -62,11 +70,8 @@ else
         var confirm = await js.InvokeAsync<bool>("confirm", $"Do you want to delete {booking.CustomerId}?");
         if (confirm)
         {
-            await _client.DeleteAsync($"{Endpoints.ModelsEndpoint}/{bookingId}");
+            await _client.DeleteAsync($"{Endpoints.BookingsEndpoint}/{bookingId}");
             await OnInitializedAsync();
         }
-
-
     }
-
 }
