--- a/CarRentalManagement/Client/Pages/Customers/Index.razor
+++ b/CarRentalManagement/Client/Pages/Customers/Index.razor
@@ -5,6 +5,13 @@
 
 
 <h3 class="card-title">Car Customers</h3>
+
+<a href="/customers/create" class="btn btn-secondary">
+    <span class="oi oi-plus"></span>
+    Create New Customer
+</a>
+<br />
+<br />
 @if (Customers == null)
 {
     <div class="alert alert-info">Loading Customers...</div>
@@ -20,28 +27,28 @@ else
                 <th>Actions</th>
             </tr>
         </thead>
-                <tbody>
-                    @foreach (var customer in Customers)
-                    {
-                        <tr>
-                            <td>@customer.DrivingLicence  </td>
-                            <td>@customer.Contactnumber</td>
-                            <td>@customer.EmailAddress</td>
-                            <td>
-                                <a href="/makes/view/@customer.Id" class="btn btn-primary">
-                                    <span class="oi oi-book"></span>
-                                </a>
-                                <a href="/makes/edit/@customer.Id" class="btn btn-warning">
-                                    <span class="oi oi-pencil"></span>
-                                </a>
-                                <button class="btn btn-danger" @onclick="@(()=>Delete(customer.Id))">
-                                    <span class="oi oi-delete"></span>
-                                </button>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-</table>
+        <tbody>
+            @foreach (var customer in Customers)
+            {
+                <tr>
+                    <td>@customer.DrivingLicence  </td>
+                    <td>@customer.Contactnumber</td>
+                    <td>@customer.EmailAddress</td>
+                    <td>
+                        <a href="/customers/view/@customer.Id" class="btn btn-primary">
+                            <span class="oi oi-book"></span>
+                        </a>
+                        <a href="/customers/edit/@customer.Id" class="btn btn-warning">
+                            <span class="oi oi-pencil"></span>
+                        </a>
+                        <button class="btn btn-danger" @onclick="@(()=>Delete(customer.Id))">
+                            <span class="oi oi-delete"></span>
+                        </button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
 
 @code {
@@ -58,7 +65,7 @@ else
         var confirm = await js.InvokeAsync<bool>("confirm", $"Do you want to delete {customer.EmailAddress}?");
         if (confirm)
         {
-            await _client.DeleteAsync($"{Endpoints.ModelsEndpoint}/{customerId}");
+            await _client.DeleteAsync($"{Endpoints.CustomersEndpoint}/{customerId}");
             await OnInitializedAsync();
         }
 
