--- a/CarRentalManagement/Client/Pages/Makes/Index.razor
+++ b/CarRentalManagement/Client/Pages/Makes/Index.razor
@@ -4,14 +4,21 @@
 @attribute [Authorize]
 
 
-<h3 class = "card-title">Car Makes</h3>
+<h3 class="card-title">Car Makes</h3>
+
+<a href="/makes/create" class="btn btn-secondary">
+    <span class="oi oi-plus"></span>
+    Create New Make
+</a>
+<br />
+<br />
 @if (Makes == null)
 {
-    <div class= "alert alert-info">Loading Makes...</div>
+    <div class="alert alert-info">Loading Makes...</div>
 }
 else
 {
-    <table class= "table table-responsive">
+    <table class="table table-responsive">
         <thead>
             <tr>
                 <th>Name</th>
@@ -24,8 +31,8 @@ else
                 <tr>
                     <td>@make.Name</td>
                     <td>
-                        <a href ="/makes/view/@make.Id" class="btn btn-primary">
-                            <span class= "oi oi-book"></span>
+                        <a href="/makes/view/@make.Id" class="btn btn-primary">
+                            <span class="oi oi-book"></span>
                         </a>
                         <a href="/makes/edit/@make.Id" class="btn btn-warning">
                             <span class="oi oi-pencil"></span>
