--- a/CarRentalManagement/Client/Pages/Models/Index.razor
+++ b/CarRentalManagement/Client/Pages/Models/Index.razor
@@ -5,6 +5,13 @@
 
 
 <h3 class="card-title">Car Models</h3>
+
+<a href="/models/create" class="btn btn-secondary">
+    <span class="oi oi-plus"></span>
+    Create New Model
+</a>
+<br />
+<br />
 @if (Models == null)
 {
     <div class="alert alert-info">Loading Models...</div>
@@ -24,10 +31,10 @@ else
                 <tr>
                     <td>@model.Name</td>
                     <td>
-                        <a href="/makes/view/@model.Id" class="btn btn-primary">
+                        <a href="/models/view/@model.Id" class="btn btn-primary">
                             <span class="oi oi-book"></span>
                         </a>
-                        <a href="/makes/edit/@model.Id" class="btn btn-warning">
+                        <a href="/models/edit/@model.Id" class="btn btn-warning">
                             <span class="oi oi-pencil"></span>
                         </a>
                         <button class="btn btn-danger" @onclick="@(()=>Delete(model.Id))">
