--- a/CarRentalManagement/Client/Pages/Vehicles/Index.razor
+++ b/CarRentalManagement/Client/Pages/Vehicles/Index.razor
@@ -5,6 +5,13 @@
 
 
 <h3 class="card-title">Car Vehicles</h3>
+
+<a href="/vehicles/create" class="btn btn-secondary">
+    <span class="oi oi-plus"></span>
+    Create New Vehicle
+</a>
+<br />
+<br />
 @if (Vehicles == null)
 {
     <div class="alert alert-info">Loading Vehicles...</div>
@@ -30,14 +37,14 @@ else
                     <td>@vehicle.Year</td>
                     <td>@vehicle.LicencePlateNumber</td>
                     <td>
-                        <a href="/makes/view/@vehicle.Id" class="btn btn-primary">
-                        <span class="oi oi-book"></span>
+                        <a href="/vehicles/view/@vehicle.Id" class="btn btn-primary">
+                            <span class="oi oi-book"></span>
                         </a>
-                        <a href="/makes/edit/@vehicle.Id" class="btn btn-warning">
-                        <span class="oi oi-pencil"></span>
+                        <a href="/vehicles/edit/@vehicle.Id" class="btn btn-warning">
+                            <span class="oi oi-pencil"></span>
                         </a>
                         <button class="btn btn-danger" @onclick="@(()=>Delete(vehicle.Id))">
-                        <span class="oi oi-delete"></span>
+                            <span class="oi oi-delete"></span>
                         </button>
                     </td>
                 </tr>
@@ -60,11 +67,9 @@ else
         var confirm = await js.InvokeAsync<bool>("confirm", $"Do you want to delete {vehicle.Bookings}?");
         if (confirm)
         {
-            await _client.DeleteAsync($"{Endpoints.ModelsEndpoint}/{vehicleId}");
+            await _client.DeleteAsync($"{Endpoints.VehiclesEndpoint}/{vehicleId}");
             await OnInitializedAsync();
         }
-
-
     }
 
 }
