--- a/CarRentalManagement/Server/Pages/Shared/_Layout.cshtml
+++ b/CarRentalManagement/Server/Pages/Shared/_Layout.cshtml
@@ -7,14 +7,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CarRentalManagement.Server</title>
+    <title>@ViewData["Title"] - Car Rental Management Application
+    </title>
     <link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/Identity/css/site.css" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-light navbar-toggleable-sm bg-white border-bottom box-shadow mb-3">
-            <div class="container">
+            <a class="navbar-brand" href="~/">
+                Car Rental Management
+                Application
+            </a>
                 <a class="navbar-brand" href="~/">CarRentalManagement.Server</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -42,8 +46,8 @@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
-        </main>
-    </div>
+            &copy; 2021 - Car Rental Management Application
+     </div>
     <footer class="footer border-top text-muted">
         <div class="container">
             &copy; 2022 - CarRentalManagement.Server - <a asp-area="" asp-page="Privacy">Privacy</a>
