--- a/CarRentalManagement/Server/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CarRentalManagement/Server/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 
 <h1>@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <section>
             <form id="account" method="post">
                 <h4>Use a local account to log in.</h4>
@@ -77,8 +77,7 @@
                 }
             }
         </section>
-    </div>
-</div>
+    </div></div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
