Adding DataTables to all the entities

--- a/CarRentalManagement/Client/Pages/Colours/Index.razor
+++ b/CarRentalManagement/Client/Pages/Colours/Index.razor
@@ -20,7 +20,7 @@
 }
 else
 {
-    <table class="table table-responsive">
+    <table class="table table-responsive" id="coloursTable">
         <thead>
             <tr>
                 <th>Name</th>
@@ -69,8 +69,14 @@ else
         }
     }
 
+    protected async override Task OnAfterRenderAsync(bool firstRender)
+    {
+        await js.InvokeVoidAsync("AddDataTable", "#coloursTable");
+    }
+
     public void Dispose()
     {
         _interceptor.DisposeEvent();
+        js.InvokeVoidAsync("DataTablesDispose", "#coloursTable");
     }
 }
