--- a/CarRentalManagement/Client/Pages/Makes/Index.razor
+++ b/CarRentalManagement/Client/Pages/Makes/Index.razor
@@ -2,7 +2,7 @@
 @inject HttpClient _client
 @inject IJSRuntime js
 @attribute [Authorize]
-
+@implements IDisposable
 
 <h3 class="card-title">Car Makes</h3>
 
@@ -18,7 +18,7 @@
 }
 else
 {
-    <table class="table table-responsive">
+    <table class="table table-responsive" id="makesTable">
         <thead>
             <tr>
                 <th>Name</th>
@@ -64,8 +64,16 @@ else
             await _client.DeleteAsync($"{Endpoints.MakesEndpoint}/{makeId}");
             await OnInitializedAsync();
         }
+    }
 
+    protected async override Task OnAfterRenderAsync(bool firstRender)
+    {
+        await js.InvokeVoidAsync("AddDataTable", "#makesTable");
+    }
 
+    public void Dispose()
+    {
+        js.InvokeVoidAsync("DataTablesDispose", "#makesTable");
     }
 
 }
